Suggestions overlap issue fixed.

--- a/sensefy-ui/src/main/ui-source/app/styles/master.css
+++ b/sensefy-ui/src/main/ui-source/app/styles/master.css
@@ -193,7 +193,7 @@ sub, sup {
 .suggestions-wrapper {
     position: absolute;
     width: 100%;
-    z-index: 1000;
+    z-index: 11000;
     top: 34px;
 }
 
